# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  data_builder.py  normalizer.py  urls.py  urls_repo.py  validator.py
page_analyzer/templates/: index.html  main.html  show.html  urls.html
page_analyzer/templates/cover/: cover.css  index.html
