[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alisa Kuzyagina <khairutdinovaaalisa@gmail.com>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.13"
gunicorn = "^23.0.0"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
psycopg2-binary = "^2.9.10"
validators = "^0.34.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-isort = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
